Changelog
=========

1.7 (xx.xx.xxxx)
~~~~~~~~~~~~~~~~

 * Elasticsearch 2 support (Karl Hobley)
 * Added support for AWS CloudFront in frontend cache invalidation module (Rob Moorman)
 * Unpublishing a page now gives the option to unpublish subpages too (Jordi Joan)
 * The `wagtailforms` module now provides a `FormSubmissionPanel` for displaying details of form submissions (João Luiz Lorencetti)
 * The Wagtail version number can now be obtained as a tuple using `from wagtail import VERSION` (Tim Heap)
 * ``send_mail`` logic has been moved from ``AbstractEmailForm.process_form_submission`` into ``AbstractEmailForm.send_mail``. Now it's easier to override this logic (Tim Leguijt)
 * Fix: Migrations for wagtailcore and project template are now reversible (Benjamin Bach)
 * Fix: The default image format label text ('Full width', 'Left-aligned', 'Right-aligned') is now localised (Mikalai Radchuk)
 * Fix: Text on the front-end 'password required' form is now marked for translation (Janneke Janssen)
 * Fix: Text on the page view restriction form is now marked for translation (Luiz Boaretto)
 * Fix: Fixed toggle behaviour of userbar on mobile (Robert Rollins)
 * Fix: Image rendition / document file deletion now happens on a post_delete signal, so that files are not lost if the deletion does not proceed (Janneke Janssen)


1.6.2 (02.09.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Initial values of checkboxes on group permission edit form now are visible on Django 1.10 (Matt Westcott)


1.6.1 (26.08.2016)
~~~~~~~~~~~~~~~~~~

 * Added ``WAGTAIL_ALLOW_UNICODE_SLUGS`` setting to make Unicode support optional in page slugs (Matt Westcott)
 * Fix: Wagtail's middleware classes are now compatible with Django 1.10's new-style middleware (Karl Hobley)
 * Fix: The `Pages.can_create_at` method is now checked in the create page view (Mikalai Radchuk)
 * Fix: Fixed regression on Django 1.10.1 causing Page subclasses to fail to use PageManager (Matt Westcott)